make news secure
